--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "contentful": "^7.0.3",
     "dotenv": "^7.0.0",
     "envfile": "^3.0.0",
+    "eslint-plugin-flowtype": "^2.50.3",
     "gatsby": "^2.3.27",
     "gatsby-plugin-google-analytics": "^2.0.18",
     "gatsby-plugin-manifest": "^2.0.29",
@@ -56,7 +57,8 @@
     "react-text-loop": "^2.0.1",
     "react-tippy": "^1.2.3",
     "rebass": "^3.0.0",
-    "styled-components": "^4.0.2"
+    "styled-components": "^4.0.2",
+    "typescript": "^3.5.3"
   },
   "devDependencies": {
     "chalk": "^2.4.1",
